tests/sksl/errors/golden/AssignmentTypeMismatch.glsl
### Compilation failed:

error: 1: expected 'int', but found 'float'
error: 2: type mismatch: '=' cannot operate on 'int', 'float'
error: 3: type mismatch: '*=' cannot operate on 'int3', 'float'
3 errors
